# CerberusDet

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
bash_scripts/: convert_single_models.sh  detect.sh  evolve.sh  train_voc_obj365.sh  train_voc_obj365_animals.sh  train_voc_obj365_animals_tableware.sh  val.sh
cerberusdet/: cerberusdet_inference.py  cerberusdet_preprocessor.py  convert_to_cerber.py  detect.py  strip_weights.py  train.py  val.py  yolo_wrapper.py
cerberusdet/data/: augmentations.py  dataloaders.py  dataset_images.py  datasets.py  samplers.py
cerberusdet/evolvers/: __init__.py  base_evolver.py  checkpoint_logger.py  file_logger.py  predefined_evolvers.py  ray_evolver.py  yolov5_evolver.py
cerberusdet/models/: cerberus.py  common.py  experimental.py  yolo.py  yolov8x.yaml  yolov8x_voc_obj365_animals.yaml  yolov8x_voc_obj365_animals_tableware.yaml
cerberusdet/trainers/: averaging.py  base_trainer.py
cerberusdet/utils/: checks.py  ckpt_utils.py  general.py  loss.py  metrics.py  mlflow_logging.py  models_manager.py  plots.py  tal.py  torch_utils.py  train_utils.py
data/: voc_obj365.yaml  voc_obj365_animals_tableware.yaml  voc_obj365_full.yaml
data/hyps/: hyp.cerber-voc_obj365.yaml  hyp.cerber-voc_obj365_subsets.yaml
data/scripts/: objects365_part.py  voc.py
